# fastuipr

./: README.md  pyproject.toml
requirements/: lint.txt  pyproject.txt  test.txt
src/fastuipr/: builders.py  styles.py  types_.py
tests/: test_auth_github.py  test_auth_shared.py  test_components.py  test_dev.py  test_forms.py  test_json_schema.py  test_prebuilt_html.py  test_tables_display.py
